https:/pod.yml
apiVersion: v1
kind: Pod
metadata: 
  name: mysql
spec:
  containers:  
    - name: db
      image: mysql
      ports:
        - containerPort: 3306
