https:/depling.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata: 
 name: deploy
spec: 
 replicas: 1
 selector:
  matchLabels:
   app: gopi
 template:
  metadata:
   labels:
    app: gopi
  spec:
   containers:
    - name: con1
      image: nginx
      ports: 
       - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
 name: np
spec:
  type: NodePort
  selector:
   app: gopi
  ports:
   - port: 80
     targetPort: 80
     nodePort: 30002
     protocol: TCP
