https:/mysql.yml
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress-backend-svc
spec:
  type: ClusterIP
  ports:
    - name: db-port
      port: 3306
      targetPort: 3306
  selector:
    app: backend
---
apiVersion: v1
kind: Pod
metadata:
  name: mysql
  labels:
    app: backend
spec:
  containers:
    - name: con1
      image: mysql
      ports:
        - containerPort: 3306
---
