https:/new.yml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-frontend-svc
spec:
  type: NodePort
  ports:
    - name: web-port
      port: 80
      targetPort: 80
      nodePort: 30001
  selector:
    app: wordpress
    #---
    #apiVersion: v1
    #kind: Service
    #metadata:
    #  name: wordpress-backend-svc
    #spec:
    #  type: ClusterIP
    #  ports:
    #    - name: db-port
    # port: 3306
    # targetPort: 3306
    #  selector:
    #    app: backend
---
apiVersion: v1
kind: Pod
metadata:
  name: frontend-deployment
  labels:
    app: wordpress
spec:
  containers:
    - name: wordpress-con
      image: wordpress
      ports:
        - containerPort: 80
