https:/wordpress.yml
---
apiVersion: v1
kind: Service
metadata:
  namespace: wordpress
  name: wordpress-frontend-svc
spec:
  type: NodePort
  ports:
    - name: web-port
      port: 80
      targetPort: 80
      nodePort: 31000
  selector:
    app: wordpress
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress-backend-svc
  namespace: wordpress
spec:
  type: ClusterIP
  ports:
    - name: db-port
      port: 3306
      targetPort: 3306
  selector:
    app: backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: wordpress-con
          image: wordpress
          ports:
            - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: mysql-con
          image: mysql
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-volume
              mountPath: /var/lib/mysql
          args: ["--default-authentication-plugin=mysql_native_password"]
      volumes:
        - name: mysql-volume
          emptyDir: {}
