https:/wp.yml
apiVersion: v1
kind: Service
metadata:
  namespace: wordpress
  name: wordpress-frontend-svc
spec:
  type: NodePort
  ports:
    - name: web-port
      port: 80
      targetPort: 80
      nodePort: 31000
  selector:
    app: wordpress
