https:/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
  - host: foo.bar.com
    http:
      paths: 
      - path: /discount
        backend:
          serviceName: np
          servicePort: 80
